--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -33,6 +33,10 @@
       margin-top: 12px;
     }
 
+    .bio {
+      margin-top: 6px;
+    }
+
     .follower-info {
       display: flex;
       justify-content: center;
@@ -44,6 +48,10 @@
     .update-profile {
       margin-top: 20px;
       display: inline-block;
+    }
+
+    .follow-link {
+      color: var(--accent-color);
     }
   }
 }
